--- a/index.html
+++ b/index.html
@@ -31,48 +31,48 @@
 
     <div class="container">
       <!-- Timeblocks go here -->
-      <div class="row">
-        <div class="col-2 col-lg-1"></div>
+      <div class="row" id="9">
+        <div class="col-2 col-lg-1 hour">9am</div>
         <textarea class="col-8 col-lg-10 task"></textarea>
         <button class="saveBtn col-2 col-lg-1 btn btn-block"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row">
-        <div class="col-2 col-lg-1"></div>
+      <div class="row" id="10">
+        <div class="col-2 col-lg-1 hour">10am</div>
         <textarea class="col-8 col-lg-10 task"></textarea>
         <button class="saveBtn col-2 col-lg-1 btn btn-block"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row">
-        <div class="col-2 col-lg-1"></div>
+      <div class="row" id="11">
+        <div class="col-2 col-lg-1 hour">11am</div>
         <textarea class="col-8 col-lg-10 task"></textarea>
         <button class="saveBtn col-2 col-lg-1 btn btn-block"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row">
-        <div class="col-2 col-lg-1"></div>
+      <div class="row" id="12">
+        <div class="col-2 col-lg-1 hour">12pm</div>
         <textarea class="col-8 col-lg-10 task"></textarea>
         <button class="saveBtn col-2 col-lg-1 btn btn-block"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row">
-        <div class="col-2 col-lg-1"></div>
+      <div class="row" id="13">
+        <div class="col-2 col-lg-1 hour">1pm</div>
         <textarea class="col-8 col-lg-10 task"></textarea>
         <button class="saveBtn col-2 col-lg-1 btn btn-block"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row">
-        <div class="col-2 col-lg-1"></div>
+      <div class="row" id="14">
+        <div class="col-2 col-lg-1 hour">2pm</div>
         <textarea class="col-8 col-lg-10 task"></textarea>
         <button class="saveBtn col-2 col-lg-1 btn btn-block"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row">
-        <div class="col-2 col-lg-1"></div>
+      <div class="row" id="15">
+        <div class="col-2 col-lg-1 hour">3pm</div>
         <textarea class="col-8 col-lg-10 task"></textarea>
         <button class="saveBtn col-2 col-lg-1 btn btn-block"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row">
-        <div class="col-2 col-lg-1"></div>
+      <div class="row" id="16">
+        <div class="col-2 col-lg-1 hour">4pm</div>
         <textarea class="col-8 col-lg-10 task"></textarea>
         <button class="saveBtn col-2 col-lg-1 btn btn-block"><i class="fas fa-save"></i></button>
       </div>
-      <div class="row">
-        <div class="col-2 col-lg-1"></div>
+      <div class="row" id="17">
+        <div class="col-2 col-lg-1 hour">5pm</div>
         <textarea class="col-8 col-lg-10 task"></textarea>
         <button class="saveBtn col-2 col-lg-1 btn btn-block"><i class="fas fa-save"></i></button>
       </div>
@@ -80,5 +80,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
